github action pulls everything

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: master
+          fetch-depth: 0
+      - name: Switch to master
+        run: git checkout master
       - name: Install env.
         run: |
           python -m venv test_evadb
