--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,10 +213,14 @@ jobs:
           keys:
             - v1-model_cache-{{ checksum "setup.py" }}
 
-      # Restore testmondata
-      - restore_cache:
-          keys:
-            - v1-testmon_cache-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }} 
+      # Restore testmondata only on open PR
+      - when:
+        condition:
+          equal: [ LONG INTEGRATION CACHE, << parameters.mode >> ]
+        step:
+          - restore_cache:
+              keys:
+                - v1-testmon_cache-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }} 
       
       - run:
           name: Install EvaDB package from GitHub repo with all dependencies
