--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,14 +213,10 @@ jobs:
           keys:
             - v1-model_cache-{{ checksum "setup.py" }}
 
-      # Restore testmondata only on open PR
-      - when:
-        condition:
-          equal: [ LONG INTEGRATION CACHE, << parameters.mode >> ]
-        step:
-          - restore_cache:
-              keys:
-                - v1-testmon_cache-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }} 
+      # Always restore testmondata from staging, python3.10, ray disabled.
+      - restore_cache:
+          keys:
+            - v1-testmon_cache-staging-python3.10-rayDISABLED-{{ checksum "setup.py" }}
       
       - run:
           name: Install EvaDB package from GitHub repo with all dependencies
@@ -272,18 +268,10 @@ jobs:
                   - /home/circleci/.cache/gpt4all/
 
     # Collect the testmondata only on the staging branch 
-      - when:
-          condition:
-            and:
-              - equal: [ staging, << pipeline.git.branch >> ]
-              - equal: [ LONG INTEGRATION, << parameters.mode >> ]
-              - equal: [ "3.10", << parameters.v >> ]
-              - equal: [ DISABLED, << parameters.ray >> ] 
-          steps:
-          - save_cache:
-              key: v1-testmon_cache-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }}
-              paths:
-                - .testmondata
+      - save_cache:
+          key: v1-testmon_cache-<< pipline.git.branch >>-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }}
+          paths:
+            - .testmondata
 
       - save_cache:
           key: v1-pip-wheel_cache-python<< parameters.v >>-ray<< parameters.ray >>-{{ checksum "setup.py" }}
