--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -67,6 +67,7 @@ parts:
           - file: source/reference/databases/sqlite
           - file: source/reference/databases/mysql
           - file: source/reference/databases/mariadb
+          - file: source/reference/databases/github
 
       - file: source/reference/ai/index
         title: AI Engines
