--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -68,6 +68,15 @@ parts:
           - file: source/reference/databases/mysql
           - file: source/reference/databases/mariadb
 
+      - file: source/reference/vector_stores/index
+        title: Vector Stores
+        sections: 
+          - file: source/reference/vector_stores/faiss
+          - file: source/reference/vector_stores/chromadb
+          - file: source/reference/vector_stores/qdrant
+          - file: source/reference/vector_stores/pgvector
+          - file: source/reference/vector_stores/pinecone
+
       - file: source/reference/ai/index
         title: AI Engines
         sections:
