--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -75,6 +75,7 @@ parts:
           - file: source/reference/vector_stores/qdrant
           - file: source/reference/vector_stores/pgvector
           - file: source/reference/vector_stores/pinecone
+          - file: source/reference/vector_stores/milvus
 
       - file: source/reference/ai/index
         title: AI Engines
