--- a/evadb/evadb.yml
+++ b/evadb/evadb.yml
@@ -27,3 +27,8 @@ third_party:
   OPENAI_KEY: ""
   PINECONE_API_KEY: ""
   PINECONE_ENV: ""
+
+  # Weaviate Configuration
+  # Weaviate API key and url Can be obtained from cluster details on Weaviate Cloud Services (WCS) dashboard
+  WEAVIATE_API_KEY: ""
+  WEAVIATE_API_URL: ""
