--- a/evadb/evadb.yml
+++ b/evadb/evadb.yml
@@ -27,3 +27,8 @@ third_party:
   OPENAI_KEY: ""
   PINECONE_API_KEY: ""
   PINECONE_ENV: ""
+  MILVUS_URI: "http://localhost:19530"
+  MILVUS_USER: ""
+  MILVUS_PASSWORD: ""
+  MILVUS_DB_NAME: ""
+  MILVUS_TOKEN: ""
