Add stable diffusion integration (#1240)
Reopen the #1111.

---------

Co-authored-by: sudoboi <guyphysicist@gmail.com>
Co-authored-by: Abhijith S Raj <63101280+sudoboi@users.noreply.github.com>

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -96,6 +96,8 @@ parts:
             title: OpenAI 
           - file: source/reference/ai/yolo
             title: YOLO 
+          - file: source/reference/ai/stablediffusion
+            title: Stable Diffusion
 
       - file: source/reference/ai/custom-ai-function
         title: Bring Your Own AI Function
