Rest API documentation

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -107,6 +107,9 @@ parts:
 
       - file: source/reference/optimizations
         title: Optimizations
+      
+      - file: source/reference/rest_api
+        title: REST API
         
       # - file: source/reference/io
       #   title: IO Descriptors
