--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -81,6 +81,7 @@ parts:
           - file: source/reference/vector_databases/qdrant
           - file: source/reference/vector_databases/pgvector
           - file: source/reference/vector_databases/pinecone
+          - file: source/reference/vector_databases/milvus
 
       - file: source/reference/ai/index
         title: AI Engines
