Add error codes docs

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -147,6 +147,8 @@ parts:
             title: Troubleshooting
           - file: source/dev-guide/contribute/unit-test
             title: Unit Testing UDFs in EvaDB
+          - file: source/dev-guide/contribute/error-codes
+            title: Error Codes in EvaDB
 
       - file: source/dev-guide/debugging
         title: Debugging EvaDB
