Add E2B Sandboxed Code Execution Integration
This change adds a new built-in function for executing python code generated by
OpenAI Chat Completion model and the supporting documentation for said function.

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -111,6 +111,8 @@ parts:
             title: YOLO 
           - file: source/reference/ai/stablediffusion
             title: Stable Diffusion
+          - file: source/reference/ai/e2b-code-execution
+            title: E2B Sandboxed Code Execution
 
       - file: source/reference/ai/custom-ai-function
         title: Bring Your Own AI Function
