--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -91,6 +91,7 @@ parts:
           - file: source/reference/vector_databases/pinecone
           - file: source/reference/vector_databases/milvus
           - file: source/reference/vector_databases/weaviate
+          - file: source/reference/vector_databases/marqo
 
       - file: source/reference/ai/index
         title: AI Engines
