chore(docs): added gemini reference

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -39,7 +39,7 @@ parts:
 
   - caption: User Reference
     chapters:
-      - file: source/reference/evaql      
+      - file: source/reference/evaql
         title: Query Language
         sections:
           - file: source/reference/evaql/load_csv
@@ -65,13 +65,13 @@ parts:
 
       - file: source/reference/api
         title: Python API
-      
+
       - file: source/reference/rest_api
         title: REST API
 
       - file: source/reference/databases/index
         title: Data Sources
-        sections: 
+        sections:
           - file: source/reference/databases/postgres
           - file: source/reference/databases/sqlite
           - file: source/reference/databases/mysql
@@ -83,7 +83,7 @@ parts:
 
       - file: source/reference/vector_databases/index
         title: Vector Databases
-        sections: 
+        sections:
           - file: source/reference/vector_databases/faiss
           - file: source/reference/vector_databases/chromadb
           - file: source/reference/vector_databases/qdrant
@@ -106,9 +106,11 @@ parts:
           - file: source/reference/ai/hf
             title: Hugging Face
           - file: source/reference/ai/openai
-            title: OpenAI 
+            title: OpenAI
+          - file: source/reference/ai/gemini
+            title: Gemini
           - file: source/reference/ai/yolo
-            title: YOLO 
+            title: YOLO
           - file: source/reference/ai/stablediffusion
             title: Stable Diffusion
 
@@ -117,7 +119,7 @@ parts:
 
       - file: source/reference/optimizations
         title: Optimizations
-        
+
       # - file: source/reference/io
       #   title: IO Descriptors
 
